src/test/compile-fail/bad-bang-ann-3.rs
// Copyright 2012 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

// Tests that a function with a ! annotation always actually fails

fn bad_bang(i: uint) -> ! {
    return 7u;
    //~^ ERROR expected `!` but found `uint`
}

fn main() { bad_bang(5u); }
